# QtExtraWidgets

./: LICENSE  README.md
Examples/: CMakeLists.txt
Examples/resource/: resource.qrc
Examples/src/: main.cpp
QLedIndicator/: QLedIndicator.cpp  QLedIndicator.h
QPanelIndicator/: QPanelIndicator.cpp  QPanelIndicator.h
